# FastAPI

./: .gitignore  main.py  pyproject.toml
sports_api/app/: database.py  main.py  schema.py
sports_api/app/routes/: matches.py
sports_api/app/services/: service.py
src/app/: database.py  db_models.py  main.py  schema.py  seed.py
src/app/examples/: match_examples.py
src/app/routes/: matches.py
src/app/services/: service.py
